Fix spacing

--- a/livinglotsphilly/static/css/map.less
+++ b/livinglotsphilly/static/css/map.less
@@ -16,11 +16,12 @@
 
     h2 {
         font-size: 16px;
+        font-weight: normal;
         text-transform: none;
     }
 
     .map-tally {
-        .make-sm-column(9, 0);
+        .make-sm-column(8, 0);
 
         .count {
             color: #B1C06F;
@@ -29,7 +30,7 @@
     }
 
     .main-buttons {
-        .make-sm-column(3);
+        .make-sm-column(4);
         .make-row(0);
         padding-right: 0;
 
@@ -41,6 +42,7 @@
             border-radius: 0;
             color: @nav-color;
             font-family: @nav-font-family;
+            font-size: 16px;
             font-weight: bold;
             line-height: @map-tally-height;
             margin-top: -@map-tally-vertical-padding;
